[tool.poetry]
name = "ydl-upload"
version = "0.1.0"
description = ""
authors = ["Andriy Mykhaylyk <erp.lsf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yt-dlp = "^2022.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
